# dbt-sugar

./: .bumpversion.cfg  .coverage  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  RELEASING.md  ROADMAP.md  codecov.yml  mypy.ini  pyproject.toml  requirements.txt  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main_ci.yaml  main_ci.yml  pg_worker.yml  pg_worker_test_compose.yml  pr_lint.yml  tox_suite.yml
changelog/: 101.feature.rst  102.feature.rst  108.misc.rst  141.feature.md  167.fix.rst  173.fix.rst  180.fix.rst  187.fix.rst  188.feat.rst  189.fix.rst  193.feat.rst  194.feature_primary_key_tests.md  20.feat.rst  203.feature.md  205.fix.rst  212.feature.md  229.feature.md  233.feature.md  238.feature.md  239.feature.md  252.fix.md  256.feature.md  257.fix.md  268.misc.md  27.misc.rst  275.misc.md  305.feature.md  309.fix.md  31.feature.rst  32.feature.rst  337.misc.md  348.fix.md  36.feature.rst  39.feature.rst  390.misc.md  409.feature.md  42.misc.rst  46.feature.rst  482.fix.md  50.feature.rst  (+5 more)
changelog/changelog/: 291.fix.md
dbt_sugar/: __init__.py
dbt_sugar/core/: _version.py  exceptions.py  flags.py  logger.py  main.py  utils.py
dbt_sugar/core/clients/: dbt.py  yaml_helpers.py
dbt_sugar/core/config/: config.py
dbt_sugar/core/connectors/: base.py  base_connector.py  big_query_connector.py  clickhouse_connector.py  postgres_connector.py  redshift_connector.py  snowflake_connector.py
dbt_sugar/core/documentation/: documentation_helper.py
dbt_sugar/core/task/: __init__.py  audit.py  base.py  bootstrap.py  doc.py  init.py
dbt_sugar/core/ui/: cli_ui.py  traceback_manager.py
dbt_sugar/core/yaml/: yaml_helpers.py
tests/: README.md  audit_task_test.py  base_task_test.py  bootstrap_task_test.py  cli_ui_test.py  clickhouse_test.py  config_test.py  db_test.py  dbt_client_test.py  doc_task_test.py  handle_test.py  postgres_test.py  profile_test.py  profiles.yml  snowflake_test.py  sugar_config.yml  sugar_config_missing_default.yml  test_yaml_helpers.py  utils_test.py  yaml_helper_tests.py
tests/docker_postgres/: .user.yml  db_setup.sql  docker-compose.yml  jaffle_shop_setup.sh  profiles.yml
tests/test_dbt_project/dbt_sugar_test/: README.md  dbt_project.yml
tests/test_dbt_project/dbt_sugar_test/models/example/: arbitrary_name.yml  my_first_dbt_model.sql  my_second_dbt_model.sql  schema.yml
tests/test_dbt_project/jaffle_shop/: README.md  dbt_project.yml  packages.yml
tests/test_dbt_project/jaffle_shop/models/: schema.yml  some_other.yml
tests/test_dbt_project/jaffle_shop/models/marts/core/: schema.yml
tests/test_dbt_project/jaffle_shop/models/staging/: schema.yml  stg_customers.sql
