[tool.poetry]
name = "dbt-sugar"
version = "0.0.0"
description = "A sweet CLI tool to help dbt users enforce documentation and testing on their dbt projects."
authors = ["Bastien Boutonnet <bastien.b1@gmail.com>"]
license = "GPLv3+"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
keywords = ["data engineering", "dbt", 'ETL', "data modelling"]
documentation = "https://bitpicky.gitbook.io/dbt-sugar/"
repository = "https://github.com/bitpicky/dbt-sugar"
# homepage =

[tool.poetry.dependencies]
python = ">=3.6.3,<3.10"
luddite = "^1.0.1"
packaging = "^20.8"
pretty-errors = "^1.2.19"
snowflake-sqlalchemy = ">=1.2.4"
SQLAlchemy = "^1.4.2"
pydantic = "^1.8"
PyYAML = "^5.4.1"
questionary = "^1.9.0"
yamlloader = "^1.0.0"
pyfiglet = "^0.8.post1"
rich = ">=9.13,<11.0"
psycopg2 = "^2.8.6"
pytest-dictsdiff = "^0.5.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
mypy = "^0.812"
towncrier = "^21.3.0"
pytest-mock = "^3.5.1"
pytest-sugar = "^0.9.4"
pytest-datafiles = "^2.0"
tox-poetry-installer = "^0.6.4"
pre-commit = "^2.12.0"
tox = "^3.23.0"
asciinema = "^2.0.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbt-sugar="dbt_sugar.core.main:main"


[tool.towncrier]
package = "dbt_sugar"
package_dir = "dbt_sugar/"
filename = "changelog/CHANGELOG.md"
directory = "changelog/"
start_string = "# Changelog\n"
issue_format = "[#{issue}](https://github.com/bitpicky/dbt-sugar/issues/{issue})"
underlines = ["", ""]
template = "changelog/.towncrier.template.md"
title_format = "## dbt-sugar [{version}] - {project_date}"



    [[tool.towncrier.type]]
    directory = "fix"
    name = "Bug Fixes"
    showcontent = true


    [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "misc"
    name = "Under The Hood/Misc"
    showcontent = true

[tool.pytest.ini_options]
markers = ["datafiles"]
